@@ -2,6 +2,13 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nwchem-6.5_p26243-r1 (12 Nov 2014)
+
+  12 Nov 2014; Honza Macháček <Hloupy.Honza@centrum.cz>
+  -nwchem-6.5_p26243.ebuild, +nwchem-6.5_p26243-r1.ebuild:
+  Handling of 32-bit versus 64-bit integers in
+  sci-chemistry/nwchem-6.5_p26243-r1 corrected.
+
 *nwchem-6.5_p26243 (11 Nov 2014)
 
   11 Nov 2014; Honza Macháček <Hloupy.Honza@centrum.cz>
